ocp-code/example-01/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: test-argocd-01
spec: {}
status: {}
