ocp-code/example-01/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: test-app
  name: test-app
  namespace: test-argocd-01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: test-app
    spec:
      containers:
      - image: quay.io/redhatworkshops/bgd:latest
        name: test-app
        resources: {}
        volumeMounts:
        - mountPath: /data
          name: v1
      volumes:
      - name: v1
        emptyDir: {}
---
